--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -277,6 +277,12 @@
     -->
     <integer name="config_longPressOnMenuBehavior">2</integer>
 
+    <!-- HW keys prefs-->
+    <bool name="config_hwKeysPref">true</bool>
+    
+    <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be autodetected from the Configuration. -->
+    <bool name="config_showNavigationBar">false</bool>
+
     <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
